--- a/test-site/index.html
+++ b/test-site/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Hello Coursera</h1>
-<button>Next</button>>
+<button onclick="location.href='https://www.youtube.com/'" type="button">Next</button>
 </body>
 </html>
