--- a/test-site/index.html
+++ b/test-site/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Youtube button below</h1>
-<button onclick="location.href='https://www.youtube.com/'" type="button">Next</button>
+<a target="_blank" href="http://youtube.com/">Youtube</a>
 </body>
 </html>
