--- a/test-site/index.html
+++ b/test-site/index.html
@@ -4,7 +4,7 @@
 	<title>Youtube</title>
 </head>
 <body>
-<h1>Youtube button below</h1>
+<h1>Youtube link below</h1>
 <a target="_blank" href="http://youtube.com/">Youtube</a>
 </body>
 </html>
