--- a/test-site/index.html
+++ b/test-site/index.html
@@ -6,5 +6,12 @@
 <body>
 <h1>Youtube link below</h1>
 <a target="_blank" href="http://youtube.com/">Youtube</a>
+
+<style>
+	.green{
+		color: green
+	}
+</style>
+<p class="green">hi</p>
 </body>
 </html>
