--- a/test-site/index.html
+++ b/test-site/index.html
@@ -5,13 +5,16 @@
 </head>
 <body>
 <h1>Youtube link below</h1>
-<a target="_blank" href="http://youtube.com/">Youtube</a>
+<body>I like <a target="_blank" href="http://youtube.com/">Youtube</a> because I can just watch videos and I can watch tutorials if I don't know something.</body>
 
 <style>
-	a, .green{
-		color: green
+	p {
+		font-size: 20px;
+	}
+	a {
+		color: green;
+		font-size: 24px;
 	}
 </style>
-<p class="green">hi</p>
 </body>
 </html>
