--- a/test-site/index.html
+++ b/test-site/index.html
@@ -8,8 +8,11 @@
 <body>I like <a target="_blank" href="http://youtube.com/">Youtube</a> because I can just watch videos and I can watch tutorials if I don't know something.</body>
 
 <style>
-	p {
-		font-size: 20px;
+	p, a, h1{
+		position: center;
+	}
+	p, a {
+		font-size: 22px;
 	}
 	a {
 		color: green;
