fixes made again

--- a/test-site/index.html
+++ b/test-site/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Youtube link below</h1>
-<body>I like <a target="_blank" href="http://youtube.com/">Youtube</a> because I can just watch videos and I can watch tutorials if I don't know something.</body>
+<p>I like <a target="_blank" href="http://youtube.com/">Youtube</a> because I can just watch videos and I can watch tutorials if I don't know something.</p>
 
 <style>
 	p, a, h1{
