--- a/test-site/index.html
+++ b/test-site/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Youtube</title>
+	<title>My Practice Website</title>
 </head>
-<body>
-<h1>Youtube link below</h1>
-<p>I like <a target="_blank" href="http://youtube.com/">Youtube</a> because I can just watch videos and I can watch tutorials if I don't know something.</p>
-
 <style>
-	p, a, h1{
-		text-align: center;
-	}
-	a {
-		color: green;
-	}
+a:hover, a:active {
+	background-color: green;
+	color: red;
+	border: 2px solid blue
+}
 </style>
-</body>
+<a>i practice</a>
 </html>
