--- a/test-site/index.html
+++ b/test-site/index.html
@@ -11,9 +11,10 @@
 			transition-duration: 1.5s;
 			transition-delay: 0.5s;
 		}
-		div:hover {
+		div:active {
 			width: 300px;
 		}
+		
 	</style>
 </head>
 <body>
