--- a/test-site/index.html
+++ b/test-site/index.html
@@ -7,12 +7,13 @@
 			width: 100px;
 			height: 100px;
 			background-color: green;
-			transition-property: width;
+			transition-property: width, height; 
 			transition-duration: 1.5s;
 			transition-delay: 0.5s;
 		}
 		div:active {
 			width: 500px;
+			height: 500px;
 		}
 		
 	</style>
