--- a/test-site/index.html
+++ b/test-site/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<a href="another-file">home</a>
+<a href="another-file.html">home</a>
 <head>
 	<title>My Practice Website</title>
 	<style>
