--- a/test-site/index.html
+++ b/test-site/index.html
@@ -2,23 +2,8 @@
 <html>
 <head>
 	<title>My Practice Website</title>
-	<style>
-		div {
-			width: 100px;
-			height: 100px;
-			background-color: green;
-			transition-property: width, height; 
-			transition-duration: 1.5s;
-			transition-delay: 0s;
-		}
-		div:active {
-			width: 500px;
-			height: 500px;
-		}
-		
-	</style>
 </head>
 <body>
-	<div></div>
+	<div>This is where the meaning of a verb is: <a href="http://www.google.com/search?q=verb&oq=verb&aqs=chrome..69i57j35i39j0l3j69i61l3.1134j0j7&sourceid=chrome&ie=UTF-8" target="_blank">https://www.google.com/search?verb&oq=verb&aqs=chrome..69i57j35i39j0l3j69i61l3.1134j0j7&sourceid=chrome&ie=UTF-8</a></div>
 </body>
 </html>
